--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,10 @@ url: http://cc213.github.io/
 # then add in the baseurl here, like this: "/repository-name"
 baseurl: ""
 
+# pagination
+paginate: 4
+paginate_path: "cc213.github.io/page:num/"
+
 #
 # !! You don't need to change any of the configuration flags below !!
 #
