--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,9 @@ baseurl: ""
 paginate: 3
 paginate_path: "articles/page:num/"
 
+# for content
+markdown: kramdown
+
 #
 # !! You don't need to change any of the configuration flags below !!
 #
