--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,8 @@ paginate_path: "articles/page:num/"
 #
 
 markdown: redcarpet
+redcarpet:
+    extensions: [with_toc_data]
 highlighter: pygments
 permalink: /:title/
 
