--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: 大智如愚，举重若轻
+name: 大智若愚，举重若轻
 
 # Short bio or description (displayed in the header)
 description: ""
